# bit9000

./: .gitignore  CONFIG_REFACTOR_PLAN.md  DESIGN.md  README.md  RESULTS.md  TUNING_GUIDE.md  analyze_data_quality.py  config.yaml  fix_tests.py  inspect_tokenized_data.py  main.py  monitor_training.py  pyproject.toml  requirements.txt  test_config.yaml
src/: __init__.py
src/model/: __init__.py  token_predictor.py  token_predictor_v2.py  trainer.py  v1_transformer.py  v2_transformer.py  v3_transformer.py  v4_transformer.py  v5_transformer.py  v6_decoder.py
src/pipeline/: __init__.py  base.py  io.py  orchestrator.py  schemas.py
src/pipeline/step_00_reset/: __init__.py  reset_block.py
src/pipeline/step_01_download/: __init__.py  data_collector.py  download_block.py
src/pipeline/step_02_clean/: __init__.py  clean_block.py  data_processor.py
src/pipeline/step_03_split/: split_block.py
src/pipeline/step_04_augment/: augment_block.py
src/pipeline/step_04_tokenize/: tokenize_block.py
src/pipeline/step_05_sequences/: __init__.py  sequence_block.py
src/pipeline/step_05_tokenize/: __init__.py  tokenize_block.py
src/system/: README.md  pretrain.py  tune.py
src/utils/: config_validator.py  logger.py  metrics.py  ordinal_loss.py  plot_utils.py  precision_loss.py  technical_indicators.py
tests/: __init__.py  conftest.py  test_ordinal_loss.py
tests/integration/: test_simple_model_training.py
tests/model/: __init__.py  test_token_predictor.py
tests/pipeline/: __init__.py
tests/utils/: test_logger.py  test_logger_edge_cases.py  test_metrics.py
(+41 files in other folders)
